--- a/resources/sass/web/app.scss
+++ b/resources/sass/web/app.scss
@@ -16,3 +16,11 @@
         cursor: pointer;
     }
 }
+
+.comment-rating {
+    a {
+        color: #f9861f;
+        display: block;
+    }
+}
+    
