--- a/resources/sass/web/app.scss
+++ b/resources/sass/web/app.scss
@@ -1,140 +1,305 @@
-.form-control {
-    height: 35px;
-    color: #4F5467 !important;
-    background-color: #fff !important;
-    background-clip: padding-box !important;
-    border: 1px solid #e9ecef !important;
-    &:focus {
-        border-color: rgba(0, 0, 0, 0.25) !important;
-        outline: 0 !important;
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #f1f1f1;
+  background: #aaa;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+@keyframes "lds-grid" {
+	0%,100% {
+		opacity: 1;
+	}
+	50% {
+		opacity: 0.5;
+	}
+}
+.bg-loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: hsla(0,0%,100%,.9);
+  z-index: 1051;
+  display: none;
+  .loader {
+    display: inline-block;
+    position: absolute;
+    top: calc(50% - 3.5px);
+    left: calc(50% - 3.5px);
+    .lds-grid {
+      display: inline-block;
+      position: relative;
+      width: 80px;
+      height: 80px;
+      div {
+        position: absolute;
+        width: 16px;
+        height: 16px;
+        border-radius: 50%;
+        background: #5ba515;
+        animation: lds-grid 1.2s linear infinite;
+        &:nth-child(1) {
+          top: 8px;
+          left: 8px;
+          animation-delay: 0s;
+        }
+        &:nth-child(2) {
+          top: 8px;
+          left: 32px;
+          animation-delay: -0.4s;
+        }
+        &:nth-child(3) {
+          top: 8px;
+          left: 56px;
+          animation-delay: -0.8s;
+        }
+        &:nth-child(4) {
+          top: 32px;
+          left: 8px;
+          animation-delay: -0.4s;
+        }
+        &:nth-child(5) {
+          top: 32px;
+          left: 32px;
+          animation-delay: -0.8s;
+        }
+        &:nth-child(6) {
+          top: 32px;
+          left: 56px;
+          animation-delay: -1.2s;
+        }
+        &:nth-child(7) {
+          top: 56px;
+          left: 8px;
+          animation-delay: -0.8s;
+        }
+        &:nth-child(8) {
+          top: 56px;
+          left: 32px;
+          animation-delay: -1.2s;
+        }
+        &:nth-child(9) {
+          top: 56px;
+          left: 56px;
+          animation-delay: -1.6s;
+        }
+      }
     }
+  }
+}
+
+.form-control {
+  height: 35px;
+  color: #4f5467 !important;
+  background-color: #fff !important;
+  background-clip: padding-box !important;
+  border: 1px solid #e9ecef !important;
+  &:focus {
+    border-color: rgba(0, 0, 0, 0.25) !important;
+    outline: 0 !important;
+  }
 }
 
 .btn-social {
-    font-size: 1.25rem;
-    &:hover {
-        cursor: pointer;
-    }
+  font-size: 1.25rem;
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .comment-rating {
-    a {
-        color: #f9861f;
-        display: block;
-    }
+  a {
+    color: #f9861f;
+    display: block;
+  }
 }
 
 .navbar-search {
-    .navbar-search-icon {
-        z-index: 1091 !important;
-    }
+  .navbar-search-icon {
+    z-index: 1091 !important;
+  }
 
-    .rd-search {
-        opacity: 0;
-        visibility: hidden;
-        position: fixed;
-        content: '';
+  .rd-search {
+    opacity: 0;
+    visibility: hidden;
+    position: fixed;
+    content: "";
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: auto;
+    margin-top: 0;
+    background: rgba(0, 0, 0, 0.9);
+    transition: all 0.3s ease-in-out;
+    z-index: 1090;
+    .form-wrap {
+      position: relative;
+      margin-top: 20%;
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 200px;
+      opacity: 0;
+      transition: all 0.3s ease;
+
+      .rd-navbar-search-form-input {
+        border-radius: 0;
+        background: transparent;
+        border-bottom: 1px solid #ffffff;
+        color: #ffffff;
+        font-size: 24px;
+        padding-right: 50px;
+        &.form-input {
+          padding-right: 50px;
+          display: block;
+          width: 100%;
+          font-weight: 400;
+          line-height: 24px;
+          letter-spacing: 0.025em;
+          transition: 0.3s ease-in-out;
+          border: 1px solid #e1e1e1;
+          border-width: 0 0 1px 0 !important;
+          outline: 0 !important;
+          &:focus {
+            outline: 0 !important;
+          }
+        }
+      }
+
+      .rd-search-form-submit {
+        color: #fff;
+        position: absolute;
         top: 0;
-        right: 0;
         bottom: 0;
-        left: 0;
-        width: auto;
-        margin-top: 0;
-        background: rgba(0, 0, 0, 0.9);
-        transition: all .3s ease-in-out;
-        z-index: 1090;
-        .form-wrap {
-            position: relative;
-            margin-top: 20%;
-            margin-left: auto;
-            margin-right: auto;
-            max-width: 200px;
-            opacity: 0;
-            transition: all .3s ease;
-
-            .rd-navbar-search-form-input {
-                border-radius: 0;
-                background: transparent;
-                border-bottom: 1px solid #ffffff;
-                color: #ffffff;
-                font-size: 24px;
-                padding-right: 50px;
-                &.form-input {
-                    padding-right: 50px;
-                    display: block;
-                    width: 100%;
-                    font-weight: 400;
-                    line-height: 24px;
-                    letter-spacing: .025em;
-                    transition: .3s ease-in-out;
-                    border: 1px solid #e1e1e1;
-                    border-width: 0 0 1px 0 !important;
-                    outline: 0 !important;
-                    &:focus {
-                        outline: 0 !important;
-                    }
-                }
-            }
-
-            .rd-search-form-submit {
-                color: #fff;
-                position: absolute;
-                top: 0;
-                bottom: 0;
-                right: 0;
-                width: 50px;
-                padding: 0;
-                margin: 0;
-                font-size: 24px;
-                line-height: 1;
-                border: none;
-                cursor: pointer;
-                background-color: transparent;
-                transition: .33s;
-            }
-        }
+        right: 0;
+        width: 50px;
+        padding: 0;
+        margin: 0;
+        font-size: 24px;
+        line-height: 1;
+        border: none;
+        cursor: pointer;
+        background-color: transparent;
+        transition: 0.33s;
+      }
     }
+  }
 
-    &.active {
-        position: relative;
-        display: inline-flex;
-        .navbar-search-icon {
-            .fa-times-circle {
-                color: #fff;
-                font-size: 1.5rem;
-            }
-        }
-        .rd-search {
-            opacity: 1 !important;
-            visibility: visible !important;
-            .form-wrap {
-                max-width: 80%;
-                opacity: 1;
-                transition-delay: .3s;
-            }
-        }
+  &.active {
+    position: relative;
+    display: inline-flex;
+    .navbar-search-icon {
+      .fa-times-circle {
+        color: #fff;
+        font-size: 1.5rem;
+      }
     }
+    .rd-search {
+      opacity: 1 !important;
+      visibility: visible !important;
+      .form-wrap {
+        max-width: 80%;
+        opacity: 1;
+        transition-delay: 0.3s;
+      }
+    }
+  }
 }
 
-@media screen  and (min-width: 1200px) {
-    .navbar-search {
-        .rd-search {
-            .form-wrap {
-                max-width: 1000px !important;
-            }
-        }
+@media screen and (min-width: 1200px) {
+  .navbar-search {
+    .rd-search {
+      .form-wrap {
+        max-width: 1000px !important;
+      }
     }
+  }
 }
 
 @media screen and (min-width: 768px) {
-    .navbar-search {
-        .rd-search {
-            .form-wrap {
-                .form-input {
-                    min-height: 60px !important;
-                    padding: 17px 0 !important;
-                }
-            }
+  .navbar-search {
+    .rd-search {
+      .form-wrap {
+        .form-input {
+          min-height: 60px !important;
+          padding: 17px 0 !important;
         }
+      }
     }
+  }
+}
+
+.footerHolder {
+  .footer-menu {
+    .nav-item {
+      margin: 0 23px;
+      display: inline-block;
+      vertical-align: middle;
+      &.active {
+        a {
+          color: #5ba515;
+        }
+      }
+
+      a {
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 0.875;
+        color: #333333;
+        padding: 10px 15px;
+        -webkit-transition: color 0.3s ease;
+        -o-transition: color 0.3s ease;
+        transition: color 0.3s ease;
+        position: relative;
+        cursor: pointer;
+        padding: 0 0 10px;
+
+        &:hover {
+          color: #5ba515;
+        }
+      }
+    }
+  }
+
+  .shop-name {
+    font-size: 16px;
+    color: #333;
+  }
+
+  .shop-info {
+    color: #333;
+    font-size: 14px;
+    a {
+      color: #333;
+    }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .footerHolder {
+    .footer-menu {
+      flex-direction: column;
+      width: 100vw !important;
+      .nav-item {
+        margin: 0 15px;
+      }
+    }
+  }
 }
