--- a/resources/sass/web/products/index.scss
+++ b/resources/sass/web/products/index.scss
@@ -1,8 +1,71 @@
 .price {
-    del {
-        font-size: 14px;
-        line-height: 16px;
-        color: #bebebe;
-        font-weight: 400;
-    }
+  del {
+    font-size: 14px;
+    line-height: 16px;
+    color: #bebebe;
+    font-weight: 400;
+  }
 }
+
+.filter-group {
+  .filter-item {
+    border-radius: 4px;
+    display: inline-block;
+    user-select: none;
+    border: 1px solid rgb(224, 224, 224);
+    background-color: rgb(255, 255, 255);
+    position: relative;
+    overflow: hidden;
+    margin-right: 0.5rem;
+    margin-bottom: 0.3rem;
+    padding: 0.375rem 0.75rem;
+    color: rgb(51, 51, 51);
+    cursor: pointer;
+    box-sizing: border-box;
+
+    &.active {
+      border: 1px solid #5ba515;
+      color: #5ba515;
+      .filter-item-checked {
+        display: block;
+      }
+      .icon-checked {
+        display: block;
+      }
+    }
+    .filter-item-checked {
+      display: none;
+      position: absolute;
+      top: -1px;
+      right: -1px;
+      width: 0px;
+      height: 0px;
+      border-style: solid;
+      border-width: 0px 20px 20px 0px;
+      border-color: transparent #5ba515 transparent transparent;
+    }
+    .icon-checked {
+      display: none;
+      position: absolute;
+      top: 0;
+      right: 2px;
+      color: rgb(255, 255, 255);
+      z-index: 0;
+      font-size: 7px;
+    }
+  }
+}
+
+.view-filters {
+  .clear-filter {
+    text-align: end;
+    #clear-filter-button {
+      color: #ef2741;
+      cursor: pointer;
+      &:hover {
+        color: #5ba515 ;
+      }
+    }
+  }
+}
+
